crates/roughly/tests/snapshots/test_format__call-12.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n    \tfn({ body })\n\n    \tfn({ body }\n        )\n\n    \tfn(\n        { body })\n\n    \tfn(\n        { body }\n        )\n    \"#}).unwrap()"
---
fn({ body })

fn({ body })

fn(
  { body }
)

fn(
  { body }
)
