crates/roughly/tests/snapshots/test_format__call-13.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        fn({ body; body })\n        fn({ body;\n        body })\n        fn({ body;\n        body }, arg)\n        fn(a = { body;\n        body }, arg)\n    \"#}).unwrap()"
---
fn({ body; body })
fn({
  body
  body
})
fn(
  {
    body
    body
  },
  arg
)
fn(
  a = {
    body
    body
  },
  arg
)
