crates/roughly/tests/snapshots/test_format__call-2.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc! {r#\"\n        fn(arg1, arg2)\n    \"#}).unwrap()"
---
fn(arg1, arg2)
