crates/roughly/tests/snapshots/test_format__call-6.snap
---
source: tests/test_format.rs
expression: "format_str(indoc!\n{\n    r#\"\n    \tfn( # (\n        \t# 1\n            argument # argument\n            # 2\n        ) # )\n    \"#\n}).unwrap()"
---
fn( # (
  # 1
  argument # argument
  # 2
) # )
