crates/roughly/tests/snapshots/test_format__call-7.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        fn(1\n        ,b=2,\n        c=3)\n    \"#}).unwrap()"
---
fn(
  1,
  b = 2,
  c = 3
)
