crates/roughly/tests/snapshots/test_format__call-8.snap
---
source: crates/roughly/tests/test_format.rs
expression: "format_str(indoc!\n{r#\"\n        fn  ( # 1\n            # 2\n            a = 1, # 3\n            b= 2) # 4\n\n    \tfn(arg1, function() { # 1\n            body # 2\n        }) # 3\n    \"#}).unwrap()"
---
fn( # 1
  # 2
  a = 1, # 3
  b = 2
) # 4

fn(arg1, function() { # 1
  body # 2
}) # 3
